chicken curry link added

--- a/odin-links-and-images/odin-recipes/index.html
+++ b/odin-links-and-images/odin-recipes/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="/home/miladmh1/git_test/odin-links-and-images/odin-recipes/recipes/lasagna.html">Lasagna</a>
+  <a href="https://github.com/miladmh1/git_test/blob/main/odin-links-and-images/odin-recipes/recipes/lasagna.html">Lasagna</a>
+  <a href="https://github.com/miladmh1/git_test/blob/main/odin-links-and-images/odin-recipes/recipes/chicken_curry.html">Chicken Curry</a>
 </body>
 </html>
