--- a/odin-links-and-images/odin-recipes/index.html
+++ b/odin-links-and-images/odin-recipes/index.html
@@ -9,6 +9,6 @@
   <h1>Odin Recipes</h1>
   <a href="\\wsl.localhost\Ubuntu\home\miladmh1\git_test\odin-links-and-images\odin-recipes\recipes\lasagna.html">Lasagna</a>
   <a href="\\wsl.localhost\Ubuntu\home\miladmh1\git_test\odin-links-and-images\odin-recipes\recipes\chicken_curry.html">Chicken Curry</a>
-  <a href="/home/miladmh1/git_test/odin-links-and-images/odin-recipes/recipes/chicken_curry.html">Mushroom Risotto</a>
+  <a href="\\wsl.localhost\Ubuntu\home\miladmh1\git_test\odin-links-and-images\odin-recipes\recipes\risotto.html">Mushroom Risotto</a>
 </body>
 </html>
